// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date DayPickerStyle classic theme applies custom styling 1`] = `
<div
  className="DayPicker DayPicker--interactionDisabled sc-bdVaJa lhuaPf"
  lang="en"
  role="application"
>
  <div
    className="DayPicker-wrapper"
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="DayPicker-NavBar"
    >
      <span
        aria-label="Previous Month"
        className="DayPicker-NavButton DayPicker-NavButton--prev"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      />
      <span
        aria-label="Next Month"
        className="DayPicker-NavButton DayPicker-NavButton--next"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      />
    </div>
    <div
      className="DayPicker-Month"
      role="grid"
    >
      <div
        className="DayPicker-Caption"
        role="heading"
      >
        <div>
          March 2019
        </div>
      </div>
      <div
        className="DayPicker-Weekdays"
        role="rowgroup"
      >
        <div
          className="DayPicker-WeekdaysRow"
          role="row"
        >
          <div
            className="DayPicker-Weekday"
            role="columnheader"
          >
            <abbr
              title="Sunday"
            >
              Su
            </abbr>
          </div>
          <div
            className="DayPicker-Weekday"
            role="columnheader"
          >
            <abbr
              title="Monday"
            >
              Mo
            </abbr>
          </div>
          <div
            className="DayPicker-Weekday"
            role="columnheader"
          >
            <abbr
              title="Tuesday"
            >
              Tu
            </abbr>
          </div>
          <div
            className="DayPicker-Weekday"
            role="columnheader"
          >
            <abbr
              title="Wednesday"
            >
              We
            </abbr>
          </div>
          <div
            className="DayPicker-Weekday"
            role="columnheader"
          >
            <abbr
              title="Thursday"
            >
              Th
            </abbr>
          </div>
          <div
            className="DayPicker-Weekday"
            role="columnheader"
          >
            <abbr
              title="Friday"
            >
              Fr
            </abbr>
          </div>
          <div
            className="DayPicker-Weekday"
            role="columnheader"
          >
            <abbr
              title="Saturday"
            >
              Sa
            </abbr>
          </div>
        </div>
      </div>
      <div
        className="DayPicker-Body"
        role="rowgroup"
      >
        <div
          className="DayPicker-Week"
          role="row"
        >
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
          <div
            aria-disabled={false}
            aria-label="Fri Mar 01 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={0}
          >
            1
          </div>
          <div
            aria-disabled={false}
            aria-label="Sat Mar 02 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            2
          </div>
        </div>
        <div
          className="DayPicker-Week"
          role="row"
        >
          <div
            aria-disabled={false}
            aria-label="Sun Mar 03 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            3
          </div>
          <div
            aria-disabled={false}
            aria-label="Mon Mar 04 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            4
          </div>
          <div
            aria-disabled={false}
            aria-label="Tue Mar 05 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            5
          </div>
          <div
            aria-disabled={false}
            aria-label="Wed Mar 06 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            6
          </div>
          <div
            aria-disabled={false}
            aria-label="Thu Mar 07 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            7
          </div>
          <div
            aria-disabled={false}
            aria-label="Fri Mar 08 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            8
          </div>
          <div
            aria-disabled={false}
            aria-label="Sat Mar 09 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            9
          </div>
        </div>
        <div
          className="DayPicker-Week"
          role="row"
        >
          <div
            aria-disabled={false}
            aria-label="Sun Mar 10 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            10
          </div>
          <div
            aria-disabled={false}
            aria-label="Mon Mar 11 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            11
          </div>
          <div
            aria-disabled={false}
            aria-label="Tue Mar 12 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            12
          </div>
          <div
            aria-disabled={false}
            aria-label="Wed Mar 13 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            13
          </div>
          <div
            aria-disabled={false}
            aria-label="Thu Mar 14 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            14
          </div>
          <div
            aria-disabled={false}
            aria-label="Fri Mar 15 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            15
          </div>
          <div
            aria-disabled={false}
            aria-label="Sat Mar 16 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            16
          </div>
        </div>
        <div
          className="DayPicker-Week"
          role="row"
        >
          <div
            aria-disabled={false}
            aria-label="Sun Mar 17 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            17
          </div>
          <div
            aria-disabled={false}
            aria-label="Mon Mar 18 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            18
          </div>
          <div
            aria-disabled={false}
            aria-label="Tue Mar 19 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            19
          </div>
          <div
            aria-disabled={false}
            aria-label="Wed Mar 20 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            20
          </div>
          <div
            aria-disabled={false}
            aria-label="Thu Mar 21 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            21
          </div>
          <div
            aria-disabled={false}
            aria-label="Fri Mar 22 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            22
          </div>
          <div
            aria-disabled={false}
            aria-label="Sat Mar 23 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            23
          </div>
        </div>
        <div
          className="DayPicker-Week"
          role="row"
        >
          <div
            aria-disabled={false}
            aria-label="Sun Mar 24 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            24
          </div>
          <div
            aria-disabled={false}
            aria-label="Mon Mar 25 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            25
          </div>
          <div
            aria-disabled={false}
            aria-label="Tue Mar 26 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            26
          </div>
          <div
            aria-disabled={false}
            aria-label="Wed Mar 27 2019"
            aria-selected={false}
            className="DayPicker-Day DayPicker-Day--today"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            27
          </div>
          <div
            aria-disabled={false}
            aria-label="Thu Mar 28 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            28
          </div>
          <div
            aria-disabled={false}
            aria-label="Fri Mar 29 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            29
          </div>
          <div
            aria-disabled={false}
            aria-label="Sat Mar 30 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            30
          </div>
        </div>
        <div
          className="DayPicker-Week"
          role="row"
        >
          <div
            aria-disabled={false}
            aria-label="Sun Mar 31 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            31
          </div>
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Date DayPickerStyle renders presentational div and context provider for its children 1`] = `
<div
  className="DayPicker DayPicker--interactionDisabled sc-bdVaJa fJAVeE"
  lang="en"
  role="application"
>
  <div
    className="DayPicker-wrapper"
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="DayPicker-NavBar"
    >
      <span
        aria-label="Previous Month"
        className="DayPicker-NavButton DayPicker-NavButton--prev"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      />
      <span
        aria-label="Next Month"
        className="DayPicker-NavButton DayPicker-NavButton--next"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      />
    </div>
    <div
      className="DayPicker-Month"
      role="grid"
    >
      <div
        className="DayPicker-Caption"
        role="heading"
      >
        <div>
          March 2019
        </div>
      </div>
      <div
        className="DayPicker-Weekdays"
        role="rowgroup"
      >
        <div
          className="DayPicker-WeekdaysRow"
          role="row"
        >
          <div
            className="DayPicker-Weekday"
            role="columnheader"
          >
            <abbr
              title="Sunday"
            >
              Su
            </abbr>
          </div>
          <div
            className="DayPicker-Weekday"
            role="columnheader"
          >
            <abbr
              title="Monday"
            >
              Mo
            </abbr>
          </div>
          <div
            className="DayPicker-Weekday"
            role="columnheader"
          >
            <abbr
              title="Tuesday"
            >
              Tu
            </abbr>
          </div>
          <div
            className="DayPicker-Weekday"
            role="columnheader"
          >
            <abbr
              title="Wednesday"
            >
              We
            </abbr>
          </div>
          <div
            className="DayPicker-Weekday"
            role="columnheader"
          >
            <abbr
              title="Thursday"
            >
              Th
            </abbr>
          </div>
          <div
            className="DayPicker-Weekday"
            role="columnheader"
          >
            <abbr
              title="Friday"
            >
              Fr
            </abbr>
          </div>
          <div
            className="DayPicker-Weekday"
            role="columnheader"
          >
            <abbr
              title="Saturday"
            >
              Sa
            </abbr>
          </div>
        </div>
      </div>
      <div
        className="DayPicker-Body"
        role="rowgroup"
      >
        <div
          className="DayPicker-Week"
          role="row"
        >
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
          <div
            aria-disabled={false}
            aria-label="Fri Mar 01 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={0}
          >
            1
          </div>
          <div
            aria-disabled={false}
            aria-label="Sat Mar 02 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            2
          </div>
        </div>
        <div
          className="DayPicker-Week"
          role="row"
        >
          <div
            aria-disabled={false}
            aria-label="Sun Mar 03 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            3
          </div>
          <div
            aria-disabled={false}
            aria-label="Mon Mar 04 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            4
          </div>
          <div
            aria-disabled={false}
            aria-label="Tue Mar 05 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            5
          </div>
          <div
            aria-disabled={false}
            aria-label="Wed Mar 06 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            6
          </div>
          <div
            aria-disabled={false}
            aria-label="Thu Mar 07 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            7
          </div>
          <div
            aria-disabled={false}
            aria-label="Fri Mar 08 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            8
          </div>
          <div
            aria-disabled={false}
            aria-label="Sat Mar 09 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            9
          </div>
        </div>
        <div
          className="DayPicker-Week"
          role="row"
        >
          <div
            aria-disabled={false}
            aria-label="Sun Mar 10 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            10
          </div>
          <div
            aria-disabled={false}
            aria-label="Mon Mar 11 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            11
          </div>
          <div
            aria-disabled={false}
            aria-label="Tue Mar 12 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            12
          </div>
          <div
            aria-disabled={false}
            aria-label="Wed Mar 13 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            13
          </div>
          <div
            aria-disabled={false}
            aria-label="Thu Mar 14 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            14
          </div>
          <div
            aria-disabled={false}
            aria-label="Fri Mar 15 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            15
          </div>
          <div
            aria-disabled={false}
            aria-label="Sat Mar 16 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            16
          </div>
        </div>
        <div
          className="DayPicker-Week"
          role="row"
        >
          <div
            aria-disabled={false}
            aria-label="Sun Mar 17 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            17
          </div>
          <div
            aria-disabled={false}
            aria-label="Mon Mar 18 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            18
          </div>
          <div
            aria-disabled={false}
            aria-label="Tue Mar 19 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            19
          </div>
          <div
            aria-disabled={false}
            aria-label="Wed Mar 20 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            20
          </div>
          <div
            aria-disabled={false}
            aria-label="Thu Mar 21 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            21
          </div>
          <div
            aria-disabled={false}
            aria-label="Fri Mar 22 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            22
          </div>
          <div
            aria-disabled={false}
            aria-label="Sat Mar 23 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            23
          </div>
        </div>
        <div
          className="DayPicker-Week"
          role="row"
        >
          <div
            aria-disabled={false}
            aria-label="Sun Mar 24 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            24
          </div>
          <div
            aria-disabled={false}
            aria-label="Mon Mar 25 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            25
          </div>
          <div
            aria-disabled={false}
            aria-label="Tue Mar 26 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            26
          </div>
          <div
            aria-disabled={false}
            aria-label="Wed Mar 27 2019"
            aria-selected={false}
            className="DayPicker-Day DayPicker-Day--today"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            27
          </div>
          <div
            aria-disabled={false}
            aria-label="Thu Mar 28 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            28
          </div>
          <div
            aria-disabled={false}
            aria-label="Fri Mar 29 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            29
          </div>
          <div
            aria-disabled={false}
            aria-label="Sat Mar 30 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            30
          </div>
        </div>
        <div
          className="DayPicker-Week"
          role="row"
        >
          <div
            aria-disabled={false}
            aria-label="Sun Mar 31 2019"
            aria-selected={false}
            className="DayPicker-Day"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="gridcell"
            tabIndex={-1}
          >
            31
          </div>
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
          <div
            aria-disabled={true}
            className="DayPicker-Day DayPicker-Day--outside"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
